# magistracy_c

./: CMakeLists.txt  README.md  task_6  task_8  task_9
os_architecture/lab_1/: task_1  task_1.c  task_10.c  task_11.c  task_2.c  task_4.c  task_6.c  task_7.c  task_8.c  task_9.c  task_9_1.c
os_architecture/lab_2/: README.md  task_1  task_1.c  task_10.c  task_11  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
os_architecture/lab_3/: README.md  task_1  task_1.c  task_10.c  task_10_1.c  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
os_architecture/lab_4/: task_1.c  task_10.c  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
os_architecture/lab_5/: task_1.c  task_10.c  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9  task_9.c
