cmake_minimum_required(VERSION 3.29)
project(untitled C)

set(CMAKE_C_STANDARD 11)

add_library(untitled STATIC library.c
        os_architecture/lab_1/task_1.c
        os_architecture/lab_1/task_2.c
        os_architecture/lab_1/task_4.c
        os_architecture/lab_1/task_6.c
        os_architecture/lab_1/task_7.c
        os_architecture/lab_1/task_8.c
        os_architecture/lab_1/task_9.c
        os_architecture/lab_1/task_9_1.c
        os_architecture/lab_1/task_10.c
        os_architecture/lab_1/task_11.c
        os_architecture/lab_2/task_1.c
        os_architecture/lab_2/task_2.c
        os_architecture/lab_2/task_3.c
        os_architecture/lab_2/task_4.c
        os_architecture/lab_2/task_5.c
        os_architecture/lab_2/task_6.c
        os_architecture/lab_2/task_7.c
        os_architecture/lab_2/task_8.c
        os_architecture/lab_2/task_9.c
        os_architecture/lab_2/task_10.c
        os_architecture/lab_2/task_11.c
        os_architecture/lab_3/task_1.c
        os_architecture/lab_3/task_2.c
        os_architecture/lab_3/task_3.c
        os_architecture/lab_3/task_4.c
        os_architecture/lab_3/task_5.c
        os_architecture/lab_3/task_6.c
        os_architecture/lab_3/task_7.c
        os_architecture/lab_3/task_8.c
        os_architecture/lab_3/task_9.c
        os_architecture/lab_3/task_10.c
        os_architecture/lab_3/task_10_1.c
        os_architecture/lab_3/task_11.c
        os_architecture/lab_3/task_10_1.c
        os_architecture/lab_4/task_1.c
        os_architecture/lab_4/task_2.c
        os_architecture/lab_4/task_3.c
        os_architecture/lab_4/task_4.c
        os_architecture/lab_4/task_5.c
        os_architecture/lab_4/task_6.c
        os_architecture/lab_4/task_7.c
        os_architecture/lab_4/task_8.c
        os_architecture/lab_4/task_9.c
        os_architecture/lab_4/task_10.c
        os_architecture/lab_4/task_11.c
        os_architecture/lab_5/task_1.c
        os_architecture/lab_5/task_2.c
        os_architecture/lab_5/task_3.c
        os_architecture/lab_5/task_4.c
        os_architecture/lab_5/task_5.c
        os_architecture/lab_5/task_6.c
        os_architecture/lab_5/task_7.c
        os_architecture/lab_5/task_8.c
)
